ros2_tracker/log/build_2026-02-06_15-44-16/traj_opt/stderr.log
In file included from /usr/include/c++/11/set:60,
                 from /opt/ros/humble/include/rclcpp/rclcpp/executors/multi_threaded_executor.hpp:21,
                 from /opt/ros/humble/include/rclcpp/rclcpp/executors.hpp:21,
                 from /opt/ros/humble/include/rclcpp/rclcpp/rclcpp.hpp:155,
                 from /home/light-sz02-liangpan/catkin_ws/Elastic-Tracker/ros2_tracker/src/tracker/traj_opt/include/traj_opt/traj_opt.h:2,
                 from /home/light-sz02-liangpan/catkin_ws/Elastic-Tracker/ros2_tracker/src/tracker/traj_opt/src/traj_opt_fake.cc:1:
/usr/include/c++/11/bits/stl_tree.h: In instantiation of ‘static const _Key& std::_Rb_tree<_Key, _Val, _KeyOfValue, _Compare, _Alloc>::_S_key(std::_Rb_tree<_Key, _Val, _KeyOfValue, _Compare, _Alloc>::_Const_Link_type) [with _Key = Eigen::Matrix<double, 3, 1>; _Val = Eigen::Matrix<double, 3, 1>; _KeyOfValue = std::_Identity<Eigen::Matrix<double, 3, 1> >; _Compare = geoutils::filterLess; _Alloc = std::allocator<Eigen::Matrix<double, 3, 1> >; std::_Rb_tree<_Key, _Val, _KeyOfValue, _Compare, _Alloc>::_Const_Link_type = const std::_Rb_tree_node<Eigen::Matrix<double, 3, 1> >*]’:
/usr/include/c++/11/bits/stl_tree.h:1905:36:   required from ‘std::_Rb_tree<_Key, _Val, _KeyOfValue, _Compare, _Alloc>::iterator std::_Rb_tree<_Key, _Val, _KeyOfValue, _Compare, _Alloc>::_M_lower_bound(std::_Rb_tree<_Key, _Val, _KeyOfValue, _Compare, _Alloc>::_Link_type, std::_Rb_tree<_Key, _Val, _KeyOfValue, _Compare, _Alloc>::_Base_ptr, const _Key&) [with _Key = Eigen::Matrix<double, 3, 1>; _Val = Eigen::Matrix<double, 3, 1>; _KeyOfValue = std::_Identity<Eigen::Matrix<double, 3, 1> >; _Compare = geoutils::filterLess; _Alloc = std::allocator<Eigen::Matrix<double, 3, 1> >; std::_Rb_tree<_Key, _Val, _KeyOfValue, _Compare, _Alloc>::iterator = std::_Rb_tree<Eigen::Matrix<double, 3, 1>, Eigen::Matrix<double, 3, 1>, std::_Identity<Eigen::Matrix<double, 3, 1> >, geoutils::filterLess, std::allocator<Eigen::Matrix<double, 3, 1> > >::iterator; std::_Rb_tree<_Key, _Val, _KeyOfValue, _Compare, _Alloc>::_Link_type = std::_Rb_tree_node<Eigen::Matrix<double, 3, 1> >*; std::_Rb_tree<_Key, _Val, _KeyOfValue, _Compare, _Alloc>::_Base_ptr = std::_Rb_tree_node_base*]’
/usr/include/c++/11/bits/stl_tree.h:2523:36:   required from ‘std::_Rb_tree<_Key, _Val, _KeyOfValue, _Compare, _Alloc>::iterator std::_Rb_tree<_Key, _Val, _KeyOfValue, _Compare, _Alloc>::find(const _Key&) [with _Key = Eigen::Matrix<double, 3, 1>; _Val = Eigen::Matrix<double, 3, 1>; _KeyOfValue = std::_Identity<Eigen::Matrix<double, 3, 1> >; _Compare = geoutils::filterLess; _Alloc = std::allocator<Eigen::Matrix<double, 3, 1> >; std::_Rb_tree<_Key, _Val, _KeyOfValue, _Compare, _Alloc>::iterator = std::_Rb_tree<Eigen::Matrix<double, 3, 1>, Eigen::Matrix<double, 3, 1>, std::_Identity<Eigen::Matrix<double, 3, 1> >, geoutils::filterLess, std::allocator<Eigen::Matrix<double, 3, 1> > >::iterator]’
/usr/include/c++/11/bits/stl_set.h:795:25:   required from ‘std::set<_Key, _Compare, _Alloc>::iterator std::set<_Key, _Compare, _Alloc>::find(const key_type&) [with _Key = Eigen::Matrix<double, 3, 1>; _Compare = geoutils::filterLess; _Alloc = std::allocator<Eigen::Matrix<double, 3, 1> >; std::set<_Key, _Compare, _Alloc>::iterator = std::_Rb_tree<Eigen::Matrix<double, 3, 1>, Eigen::Matrix<double, 3, 1>, std::_Identity<Eigen::Matrix<double, 3, 1> >, geoutils::filterLess, std::allocator<Eigen::Matrix<double, 3, 1> > >::const_iterator; std::set<_Key, _Compare, _Alloc>::key_type = Eigen::Matrix<double, 3, 1>]’
/home/light-sz02-liangpan/catkin_ws/Elastic-Tracker/ros2_tracker/src/tracker/traj_opt/include/traj_opt/geoutils.hpp:95:20:   required from here
/usr/include/c++/11/bits/stl_tree.h:770:15: error: static assertion failed: comparison object must be invocable as const
  770 |               is_invocable_v<const _Compare&, const _Key&, const _Key&>,
      |               ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/include/c++/11/bits/stl_tree.h:770:15: note: ‘std::is_invocable_v<const geoutils::filterLess&, const Eigen::Matrix<double, 3, 1, 0, 3, 1>&, const Eigen::Matrix<double, 3, 1, 0, 3, 1>&>’ evaluates to false
In file included from /usr/include/c++/11/set:60,
                 from /opt/ros/humble/include/rclcpp/rclcpp/executors/multi_threaded_executor.hpp:21,
                 from /opt/ros/humble/include/rclcpp/rclcpp/executors.hpp:21,
                 from /opt/ros/humble/include/rclcpp/rclcpp/rclcpp.hpp:155,
                 from /home/light-sz02-liangpan/catkin_ws/Elastic-Tracker/ros2_tracker/src/tracker/traj_opt/include/traj_opt/traj_opt.h:2,
                 from /home/light-sz02-liangpan/catkin_ws/Elastic-Tracker/ros2_tracker/src/tracker/traj_opt/src/traj_opt.cc:1:
/usr/include/c++/11/bits/stl_tree.h: In instantiation of ‘static const _Key& std::_Rb_tree<_Key, _Val, _KeyOfValue, _Compare, _Alloc>::_S_key(std::_Rb_tree<_Key, _Val, _KeyOfValue, _Compare, _Alloc>::_Const_Link_type) [with _Key = Eigen::Matrix<double, 3, 1>; _Val = Eigen::Matrix<double, 3, 1>; _KeyOfValue = std::_Identity<Eigen::Matrix<double, 3, 1> >; _Compare = geoutils::filterLess; _Alloc = std::allocator<Eigen::Matrix<double, 3, 1> >; std::_Rb_tree<_Key, _Val, _KeyOfValue, _Compare, _Alloc>::_Const_Link_type = const std::_Rb_tree_node<Eigen::Matrix<double, 3, 1> >*]’:
/usr/include/c++/11/bits/stl_tree.h:1905:36:   required from ‘std::_Rb_tree<_Key, _Val, _KeyOfValue, _Compare, _Alloc>::iterator std::_Rb_tree<_Key, _Val, _KeyOfValue, _Compare, _Alloc>::_M_lower_bound(std::_Rb_tree<_Key, _Val, _KeyOfValue, _Compare, _Alloc>::_Link_type, std::_Rb_tree<_Key, _Val, _KeyOfValue, _Compare, _Alloc>::_Base_ptr, const _Key&) [with _Key = Eigen::Matrix<double, 3, 1>; _Val = Eigen::Matrix<double, 3, 1>; _KeyOfValue = std::_Identity<Eigen::Matrix<double, 3, 1> >; _Compare = geoutils::filterLess; _Alloc = std::allocator<Eigen::Matrix<double, 3, 1> >; std::_Rb_tree<_Key, _Val, _KeyOfValue, _Compare, _Alloc>::iterator = std::_Rb_tree<Eigen::Matrix<double, 3, 1>, Eigen::Matrix<double, 3, 1>, std::_Identity<Eigen::Matrix<double, 3, 1> >, geoutils::filterLess, std::allocator<Eigen::Matrix<double, 3, 1> > >::iterator; std::_Rb_tree<_Key, _Val, _KeyOfValue, _Compare, _Alloc>::_Link_type = std::_Rb_tree_node<Eigen::Matrix<double, 3, 1> >*; std::_Rb_tree<_Key, _Val, _KeyOfValue, _Compare, _Alloc>::_Base_ptr = std::_Rb_tree_node_base*]’
/usr/include/c++/11/bits/stl_tree.h:2523:36:   required from ‘std::_Rb_tree<_Key, _Val, _KeyOfValue, _Compare, _Alloc>::iterator std::_Rb_tree<_Key, _Val, _KeyOfValue, _Compare, _Alloc>::find(const _Key&) [with _Key = Eigen::Matrix<double, 3, 1>; _Val = Eigen::Matrix<double, 3, 1>; _KeyOfValue = std::_Identity<Eigen::Matrix<double, 3, 1> >; _Compare = geoutils::filterLess; _Alloc = std::allocator<Eigen::Matrix<double, 3, 1> >; std::_Rb_tree<_Key, _Val, _KeyOfValue, _Compare, _Alloc>::iterator = std::_Rb_tree<Eigen::Matrix<double, 3, 1>, Eigen::Matrix<double, 3, 1>, std::_Identity<Eigen::Matrix<double, 3, 1> >, geoutils::filterLess, std::allocator<Eigen::Matrix<double, 3, 1> > >::iterator]’
/usr/include/c++/11/bits/stl_set.h:795:25:   required from ‘std::set<_Key, _Compare, _Alloc>::iterator std::set<_Key, _Compare, _Alloc>::find(const key_type&) [with _Key = Eigen::Matrix<double, 3, 1>; _Compare = geoutils::filterLess; _Alloc = std::allocator<Eigen::Matrix<double, 3, 1> >; std::set<_Key, _Compare, _Alloc>::iterator = std::_Rb_tree<Eigen::Matrix<double, 3, 1>, Eigen::Matrix<double, 3, 1>, std::_Identity<Eigen::Matrix<double, 3, 1> >, geoutils::filterLess, std::allocator<Eigen::Matrix<double, 3, 1> > >::const_iterator; std::set<_Key, _Compare, _Alloc>::key_type = Eigen::Matrix<double, 3, 1>]’
/home/light-sz02-liangpan/catkin_ws/Elastic-Tracker/ros2_tracker/src/tracker/traj_opt/include/traj_opt/geoutils.hpp:95:20:   required from here
/usr/include/c++/11/bits/stl_tree.h:770:15: error: static assertion failed: comparison object must be invocable as const
  770 |               is_invocable_v<const _Compare&, const _Key&, const _Key&>,
      |               ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/include/c++/11/bits/stl_tree.h:770:15: note: ‘std::is_invocable_v<const geoutils::filterLess&, const Eigen::Matrix<double, 3, 1, 0, 3, 1>&, const Eigen::Matrix<double, 3, 1, 0, 3, 1>&>’ evaluates to false
gmake[2]: *** [CMakeFiles/traj_opt.dir/build.make:90：CMakeFiles/traj_opt.dir/src/traj_opt_fake.cc.o] 错误 1
gmake[2]: *** 正在等待未完成的任务....
gmake[2]: *** [CMakeFiles/traj_opt.dir/build.make:76：CMakeFiles/traj_opt.dir/src/traj_opt.cc.o] 错误 1
gmake[1]: *** [CMakeFiles/Makefile2:137：CMakeFiles/traj_opt.dir/all] 错误 2
gmake: *** [Makefile:146：all] 错误 2
